--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hook-form": "^0.0.1",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "next-themes": "^0.4.6",
-    "react": "19.2.1",
+    "react": "^19.2.1",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
     "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
