--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "better-auth": "^1.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "hook-form": "^0.0.1",
     "lucide-react": "^0.556.0",
-    "next": "16.0.8",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "^19.2.1",
